backend/ai-integration Fix grammar and phrasing in documentation and UI components

--- a/backend/public/index.html
+++ b/backend/public/index.html
@@ -159,7 +159,7 @@
     </div>
     
     <h2>Testing the API</h2>
-    <p>You can test these endpoints using tools like:</p>
+    <p>Can test these endpoints using tools like:</p>
     <ul>
       <li>Postman</li>
       <li>cURL</li>
